Changelog
=========

1.5 (unreleased)
----------------

* Support for local users. [sylvain]

* Support cascading of PAS acl_users. Add a plugin which does look in
  the parent one needed information to let people authenticate. It's
  an extension of the SearchPrincipalPlugin. [sylvain]

* Let Anonymous people access the login form by default (the acquired
  permission might not be right). [sylvain]

1.2 (2008-11-20)
----------------

* Fix authentication validation in cookie helper. [sylvain]

1.1.1 (2008-08-25)
------------------

* Fix an error when you ask a member which doesn't exist and use the direct
  lookup mode in Silva. [sylvain]

1.1 (2008-06-04)
----------------

* Add a silva cookie auth helper which check that you type user and password,

* Add feedback on the login page,

* Add translation markers.


1.0 (2008-05-27)
----------------

* Initial version


1.1.1 (2008-08-25)
-----------------

* Fix an error when you ask a member which doesn't exist and use the direct
  lookup mode in Silva. [sylvain]

1.1 (2008-06-04)
---------------

* Add a silva cookie auth helper which check that you type user and password,

* Add feedback on the login page,

* Add translation markers.


1.0 (2008-05-27)
----------------

* Initial version
